RESOLVED FIXED 262453
[UnifiedPDF] Scale pages to fix the available width
https://bugs.webkit.org/show_bug.cgi?id=262453
Summary [UnifiedPDF] Scale pages to fix the available width
Simon Fraser (smfr)
Reported 2023-09-30 19:23:59 PDT
Implement scaling for Unified PDF
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-30 19:24:14 PDT
Simon Fraser (smfr)
Comment 2 2023-10-01 13:54:29 PDT
EWS
Comment 3 2023-10-01 18:30:11 PDT
Committed 268715@main (e7a5da73d9c2): <https://commits.webkit.org/268715@main> Reviewed commits have been landed. Closing PR #18472 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.