[UnifiedPDF] Scale pages to fix the available width https://bugs.webkit.org/show_bug.cgi?id=262453 rdar://116295967

Reviewed by Tim Horton and Richard Robinson.

PDFs are always scaled so that the widest page (or pair of pages) fits the available width.
So we set the width of the `embed` in `PluginDocumentParser::createStyleElement()` to always
be 100%, and stop setting the width in inline style in `UnifiedPDFPlugin::sizeToFitContents()`.

`PDFDocumentLayout::updateLayout()` now lays out pages to the available width, and we compute
the scale factor afterwards. This scale is applied when drawing.

This PR also moves `convertFromRootViewToPlugin()` to the base class, since this will be
shared by both PDFPlugin implementations, and a future PR will use it for point mapping.

* Source/WebCore/html/PluginDocument.cpp:
(WebCore::PluginDocumentParser::createStyleElement):
* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::geometryDidChange):
(WebKit::PDFPlugin::convertFromRootViewToPlugin const): Deleted.
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::geometryDidChange):
(WebKit::PDFPluginBase::convertFromRootViewToPlugin const):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDocumentLayout.h:
(WebKit::PDFDocumentLayout::scale const):
(WebKit::PDFDocumentLayout::layoutSize const): Deleted.
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDocumentLayout.mm:
(WebKit::PDFDocumentLayout::setPDFDocument):
(WebKit::PDFDocumentLayout::updateLayout):
(WebKit::PDFDocumentLayout::layoutPages):
(WebKit::PDFDocumentLayout::layoutSingleColumn):
(WebKit::PDFDocumentLayout::scaledContentsSize const):
(WebKit::PDFDocumentLayout::updateGeometry): Deleted.
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::installPDFDocument):
(WebKit::UnifiedPDFPlugin::sizeToFitContents):
(WebKit::UnifiedPDFPlugin::paint):
(WebKit::UnifiedPDFPlugin::geometryDidChange):

Canonical link: https://commits.webkit.org/268715@main